# glot-run2

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: release.yaml
data/: users.json
scripts/: create_language.sh  create_user.sh  delete_language.sh  delete_user.sh  run.sh  update_user.sh
src/: main.rs
src/glot_run/: config.rs  datastore.rs  file.rs  language.rs  mod.rs  run.rs  user.rs  util.rs
src/glot_run/api/: mod.rs  not_found.rs  root.rs
src/glot_run/api/admin/: create_user.rs  delete_user.rs  list_users.rs  mod.rs
src/glot_run/api/admin/languages/: create.rs  delete.rs  get.rs  list.rs  mod.rs
src/glot_run/api/admin/users/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/glot_run/api/images/: list.rs  mod.rs
src/glot_run/api/languages/: list.rs  list_versions.rs  mod.rs  run.rs
systemd/: glot-run.service
