[package]
name = "glot-run"
version = "0.1.0"
authors = ["Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
log = "0.4.11"
env_logger = "0.7.1"
tiny_http = { git = "https://github.com/prasmussen/tiny-http" }
ascii = "1.0.0"
tempfile = "3.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.19"
sha1 = { version = "0.6.0", features = ["std"] }
ureq = { version = "1.5.1", features = ["json"] }
